// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log Right Click conn log with pcap support 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Exclude this value",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Include this value",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Count by id.orig_h",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "New search with this value",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Whois Lookup",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Download PCAPS",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click conn log without pcap support 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Exclude this value",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Include this value",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Count by id.orig_h",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "New search with this value",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Whois Lookup",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click dns log 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Exclude this value",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Include this value",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Count by query",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "New search with this value",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click time field for conn log 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Use as \\"start\\" time",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Use as \\"end\\" time",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click time field for weird log 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Use as \\"start\\" time",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Use as \\"end\\" time",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;
